--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: glq123Ab
+    password: 12345678
     url: jdbc:mysql://127.0.0.1:3306/JavaEE
   redis:
     host: 127.0.0.1
@@ -14,6 +14,10 @@ spring:
         max-active: -1
         max-idle: 500
         max-wait: -1s
+  thymeleaf:
+    mode: LEGACYHTML5
+    cache: false
+
 mybatis:
   mapper-locations: classpath*:mappers/*Mapper.xml
   type-aliases-package: com.guliqi.bookstore.model
